# opsworks-tool

./: README.md  clean.sh  setup.cfg  setup.py
opsworkstool/: __init__.py  command.py  opsworks_creator.py  opsworks_deployer.py  stack_tool.py  template_creator.py  utility.py
opsworkstool/template/simple/: .opsworkstool  template.json
opsworkstool/template/simple/config/: config.ini
