[bumpversion]
current_version = 0.5.0
commit = True
tag = False

[metadata]
description-file = README.md
url = https://github.com/rubelwi/opsworks-tool

[bdist_wheel]
universal = 1

[bumpversion:file:setup.py]

[bumpversion:file:README.md]

[bumpversion:file:opsworkstool/__init__.py]

[bumpversion:file:opsworkstool/command.py]

[bumpversion:file:opsworkstool/template/service/.opsworkstool]

[bumpversion:file:opsworkstool/template/simple/.opsworkstool]

